# praxis-mcp

./: ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_EVOLUTION_PLAN.md  README.md  lifecycle.db  lifecycle.db-shm  lifecycle.db-wal  pyproject.toml
docs/: deprecation-plan.md  dialogue-provider-enhancements.md  finally-feature.md  parameter-flow-analysis.md  parameter-flow-guide.md  phase3-factory-pattern.md  phase4-async-management.md  phase5-configuration-objects.md  task-progress-type-fixes.md  task-progress.md  test-fixes-task-progress.md  test-simplification-guide.md
docs/10-architecture/: agent-plugin-pipeline-integration-guide.md  agent-session-flow-examples.md  agent-session-implementation-roadmap.md  execution-context.md  hierarchical-breakdown.md  interactive-pipeline-execution.md  praxis-uml-flow.mmd  unified-agent-sessions.md
docs/20-cli/: cli-flow.mmd  cli.md  event-loop-management-guide.md
docs/30-api/: api-reference.md  condition-parser.md  conditional-dependency.md  index.md  loop-config.md  pipeline-builder.md
docs/40-agents/: agent-directives.md  agent-execution-flow.md  agent-flow-simplified.md  agent-graphql-examples.md
docs/50-pipelines/: enhanced-control-flow-guide.md  enhanced-control-flow-quick-reference.md  inputs-section-analysis.md  pipeline-config-investigation.md  pipeline-parameter-passing-examples.md  pipeline-plugins-architecture.md  pipeline_params.md
docs/60-plugins/: DEVELOPER_GUIDE.md  external-plugin-development.md  external-plugin-integration.md  git-based-plugin-development.md  plugin-manifest-specification.md  plugin-parameter-config-guide.md  plugin-sandbox.md  plugin_connections.md  simple-plugin-management.md
docs/70-development/: CODING_STANDARDS.md  code-complexity-analysis.md  code_audit_playbook.md  development.md  mlflow-guide.md  root-cause-analysis.md  testing.md  useful-prompts.md
docs/80-other/: praxis-slack-commands.md
docs/99-archive/: mcp-prd.md  unified-agent-sessions-summary.md
docs/examples/: structured-data-collection.md
examples/: basic_workflow.py  mcp_integration.py
exports/: full-project-diagram-2025-07-25-133021.md
src/: __init__.py  cli.py
src/ceto/: __init__.py  pipeline_tool.py
src/core/: artifact_manager.py  dag_executor.py  dependency_container.py  execution_context.py  loop_execution_strategy.py  orchestrator.py  step_registry.py  task_manager.py
src/core/artifacts/: __init__.py  commands.py  handler.py  middleware.py
src/mcp/: __init__.py  cli.py  models.py  server.py  tool_registry.py
src/plugins/: plugin_base.py
tests/: async_helpers.py  conftest.py  fixtures.py  mock_factories.py  test_mcp_server.py
